--- a/styles/chat.css
+++ b/styles/chat.css
@@ -1867,6 +1867,10 @@ TABLE OF CONTENTS
     line-height: 15px;
     font-family: Verdana, Arial, Helvetica, sans-serif;
 }
+
+.mky-content-contact{
+  text-align: left;
+}
 /* location bubble */
 
 .mky-bubble-location{
